--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -254,6 +254,8 @@ body{
       &-subtitle{
         margin: 5px 0;
         text-align: center;
+        font-size: 0.9rem;
+        font-weight: 700;
       }
     }
     &__img{
@@ -277,7 +279,7 @@ body{
     }
   }
   &__calculator{
-    margin: 50px 0;
+    margin: 50px 0 0;
     position: relative;
     display: flex;
     width: 100%;
@@ -314,6 +316,7 @@ body{
       text-align: center;
       & span{
         margin: 5px;
+        max-width: 75%;
         & a{
           color: white;
           text-decoration: underline;
@@ -345,6 +348,8 @@ body{
         padding: 5px 25px;
         font-size: 1.2rem;
         text-transform: uppercase;
+        background: #fede00;
+        border: 1px solid #b4b4b4;
       }
     }
     &__title{
@@ -355,6 +360,189 @@ body{
     }
     &__subtitle{
       margin-bottom: 10px;
+    }
+  }
+  &__we_work{
+    position: relative;
+    display: flex;
+    width: 100%;
+    background: url("../img/bg-how-we-work.jpg") center center fixed;
+    background-size: cover;
+    color: white;
+    flex-direction: column;
+    align-items: center;
+  }
+  & .we_work{
+    &__title{
+      text-transform: uppercase;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      position: relative;
+      margin: 50px 0;
+    }
+    &__wrap{
+      position: relative;
+      display: flex;
+      width: 100%;
+      max-width: 1600px;
+      align-items: stretch;
+      justify-content: space-between;
+      margin-bottom: 75px;
+    }
+    &__box{
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      width: 24%;
+      height: auto;
+      &:nth-child(2n){
+        flex-direction: column-reverse;
+      }
+    }
+    &__point{
+      position: relative;
+      display: flex;
+      align-items: center;
+      font-weight: 700;
+      margin: 5px 0;
+    }
+    &__number{
+      font-size: 1.2rem;
+      padding: 10px;
+      border: 1px solid #fede00;
+      margin-right: 10px;
+    }
+    &__img{
+      position: relative;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      overflow: hidden;
+      height: 350px;
+      & img{
+        position: absolute;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        transition: width .2s;
+        &:hover{
+          transition: width .2s;
+          width: 115%;
+        }
+      }
+
+    }
+  }
+  &__equipment{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    background: white;
+    margin: 50px 0;
+  }
+  & .equipment{
+    &__wrap{
+      position: relative;
+      display: flex;
+      width: 100%;
+      max-width: 1600px;
+      align-items: center;
+      justify-content: space-between;
+    }
+    &__box{
+      position: relative;
+      display: flex;
+      width: 30%;
+      align-items: center;
+      flex-direction: column;
+      padding: 50px 0 25px;
+      border: 1px solid #b4b4b4;
+    }
+    &__icon{
+      position: absolute;
+      top: 0;
+      transform: translate(0, -75%);
+      width: 30%;
+      height: auto;
+    }
+    &__title{
+      position: relative;
+      margin-bottom: 125px;
+      text-transform: uppercase;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    &__desc{
+      text-transform: uppercase;
+      font-weight: 700;
+    }
+    &__img{
+      position: relative;
+      display: flex;
+      align-items: center;
+      justify-content:center;
+      width: 100%;
+    }
+  }
+  &__news{
+    position: relative;
+    display: flex;
+    width: 100%;
+    background: #f7f7f7;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 50px;
+  }
+  & .news{
+    &__title{
+      position: relative;
+      margin: 50px 0;
+      text-transform: uppercase;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    &__wrap{
+      position: relative;
+      display: flex;
+      width: 100%;
+      max-width: 1600px;
+      align-items: center;
+      justify-content: space-between;
+    }
+    &__box{
+      position: relative;
+      display: flex;
+      width: 49%;
+      flex-wrap: wrap;
+    }
+    &__img{
+      position: relative;
+      display: flex;
+      width: 48%;
+      align-items: center;
+      justify-content: center;
+      height: auto;
+      float: left;
+      margin-right: 2%;
+    }
+    &__subtitle{
+      position: relative;
+      text-align: center;
+      text-transform: uppercase;
+      font-size: 1.1rem;
+      width: 100%;
+      padding-bottom: 15px;
+    }
+    &__desc{
+      position: relative;
+      width: 100%;
     }
   }
 }
