--- a/src/css/style.css
+++ b/src/css/style.css
@@ -460,6 +460,59 @@ body {
     position: relative;
     width: 100%; }
 
+.footer {
+  position: relative;
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  background: #2a2a2a; }
+  .footer__contacts {
+    position: relative;
+    display: flex;
+    width: 49.9%;
+    align-items: flex-end;
+    justify-content: flex-end;
+    color: white;
+    flex-direction: column; }
+    .footer__contacts a {
+      color: white; }
+    .footer__contacts--wrap {
+      position: relative;
+      display: flex;
+      width: 75%;
+      flex-direction: column;
+      margin-top: auto;
+      height: 400px; }
+  .footer__map {
+    position: relative;
+    display: flex;
+    width: 50%;
+    align-items: center;
+    justify-content: center;
+    height: 400px; }
+  .footer__title {
+    margin: 50px 0;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    text-transform: uppercase; }
+  .footer__phone {
+    margin: 15px 0;
+    font-size: 1.3rem;
+    cursor: pointer; }
+    .footer__phone:hover {
+      text-decoration: underline; }
+  .footer__mail {
+    margin: 15px 0;
+    font-size: 1.3rem;
+    cursor: pointer; }
+    .footer__mail:hover {
+      text-decoration: underline; }
+  .footer__address {
+    margin: 15px 0;
+    font-size: 1.3rem; }
+
 .slider {
   position: relative;
   display: flex;
