--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -546,6 +546,70 @@ body{
     }
   }
 }
+.footer{
+  position: relative;
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  background: #2a2a2a;
+  &__contacts{
+    position: relative;
+    display: flex;
+    width: 49.9%;
+    align-items: flex-end;
+    justify-content: flex-end;
+    color: white;
+    flex-direction: column;
+    & a{
+      color: white;
+    }
+    &--wrap{
+      position: relative;
+      display: flex;
+      width: 75%;
+      flex-direction: column;
+      margin-top: auto;
+      height: 400px;
+    }
+  }
+  &__map{
+    position: relative;
+    display: flex;
+    width: 50%;
+    align-items: center;
+    justify-content: center;
+    height: 400px;
+  }
+  &__title{
+    margin: 50px 0;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    text-transform: uppercase;
+  }
+  &__phone{
+    margin:15px 0;
+    font-size: 1.3rem;
+    cursor: pointer;
+    &:hover{
+      text-decoration: underline;
+    }
+  }
+  &__mail{
+    margin:15px 0;
+    font-size: 1.3rem;
+    cursor: pointer;
+    &:hover{
+      text-decoration: underline;
+    }
+  }
+  &__address{
+    margin:15px 0;
+    font-size: 1.3rem;
+  }
+}
+
 
 .slider{
   position: relative;
