--- a/src/css/style.css
+++ b/src/css/style.css
@@ -54,7 +54,8 @@ body {
       display: flex;
       width: 40%;
       height: 125px;
-      align-items: center; }
+      align-items: center;
+      flex-direction: column; }
     .header__logo img {
       position: relative;
       display: flex;
@@ -79,7 +80,8 @@ body {
     margin: 10px 5px;
     justify-content: center;
     align-items: center;
-    font-size: 1.1rem; }
+    font-size: 1.1rem;
+    flex-direction: column; }
     .header__contacts-wrap {
       position: relative;
       display: flex;
@@ -93,7 +95,8 @@ body {
   .header__buttons {
     position: relative;
     display: flex;
-    align-items: center; }
+    align-items: center;
+    flex-direction: column; }
   .header__button {
     position: relative;
     display: flex;
@@ -165,7 +168,8 @@ body {
     color: white;
     padding: 10px 0; }
     .main__request-desc {
-      font-size: 1.2rem; }
+      font-size: 1.2rem;
+      text-align: center; }
     .main__request-button {
       margin-top: 5px;
       padding: 10px 20px;
@@ -215,7 +219,8 @@ body {
     flex-direction: column; }
     .main .offer__desc-title {
       margin-bottom: 10px;
-      font-size: 1.8rem; }
+      font-size: 1.8rem;
+      text-align: center; }
     .main .offer__desc-subtitle {
       margin: 5px 0;
       text-align: center;
@@ -306,7 +311,8 @@ body {
     text-transform: uppercase;
     font-size: 1.8rem; }
   .main .calculator__subtitle {
-    margin-bottom: 10px; }
+    margin-bottom: 10px;
+    text-align: center; }
   .main__we_work {
     position: relative;
     display: flex;
@@ -406,7 +412,8 @@ body {
     justify-content: center; }
   .main .equipment__desc {
     text-transform: uppercase;
-    font-weight: 700; }
+    font-weight: 700;
+    text-align: center; }
   .main .equipment__img {
     position: relative;
     display: flex;
